# tinyseg

./: .gitignore  README.md  export_onnx.py  merge_yolo_datasets.py  pyproject.toml  quantize_x5.py  train_yolov26.py  verify_board.py
dev/: Dockerfile
tinyseg/: calibration.py  export.py  merge.py  quantize.py  rdk_x5_config.py  train.py  ultralytics_rdk.py  verify.py  wandb_logger.py
